--- a/style.css
+++ b/style.css
@@ -1,13 +1,112 @@
 .page {
-    background-color: #000000;
-    ;
+    background-color: hsl(0, 0%, 0%);
+    position: relative;
+}
+
+
+.overlay {
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, .5);
+}
+
+.overlay_active {
+    display: block;
 }
 
 .wrapper {
+    padding: 0 15px;
     display: block;
     max-width: 880px;
-
     margin: 0 auto;
+}
+
+.menu {
+    display: none;
+    left: 50%;
+    top: 20%;
+    transform: translateX(-50%);
+    z-index: 3;
+    position: fixed;
+    background-color: #FFFFFF;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+}
+
+.menu-active {
+    display: block;
+
+}
+
+.menu__title {
+    width: 330px;
+    text-align: center;
+    margin: 34px 36px 54px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 18px;
+    line-height: 22px;
+    color: #000000;
+
+}
+
+.profile__options {
+    max-width: 430px;
+}
+
+.close-icon {
+    top: -40px;
+    left: 435px;
+    position: fixed;
+    cursor: pointer;
+
+
+}
+
+.menu__name {
+    border: 0;
+    width: 358px;
+    height: 27px;
+    margin: 54px 36px 0;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #000000;
+    border-bottom: 1px solid #000000;
+}
+
+.menu__subtitle {
+    border: 0;
+    width: 358px;
+    height: 27px;
+    margin: 30px 36px 0;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #000000;
+    border-bottom: 1px solid #000000;
+}
+
+.menu__button {
+    cursor: pointer;
+    margin: 48px 36px 37px;
+    width: 358px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    color: #FFFFFF;
+    background: #000000;
+    border-radius: 2px;
 }
 
 .header {
@@ -44,6 +143,9 @@
 }
 
 .profile__name {
+    max-width: 358px;
+    text-overflow: ellipsis;
+    overflow: hidden;
     white-space: nowrap;
     margin: 0;
     display: block;
@@ -57,10 +159,15 @@
 
 .profile__edit-button {
     margin: 15px 0 0 18px;
+    cursor: pointer;
 }
 
 .profile__subtitle {
+    max-width: 358px;
     margin: 16px 0 0;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
@@ -72,8 +179,8 @@
 .profile__add-button {
     max-height: 50px;
     margin: 35px 0 0 244px;
-
 }
+
 
 @media screen and (max-width: 879px) {
     .profile {
@@ -106,7 +213,7 @@
 }
 
 @media screen and (max-width: 320px) {
-    .profile__name{
+    .profile__name {
         width: 189px;
         margin: 0 0 0 51px;
     }
@@ -124,7 +231,7 @@
 }
 
 @media screen and (max-width: 320px) {
-    .profile__subtitle{
+    .profile__subtitle {
         width: 100%;
         margin: 14px 0 0;
     }
@@ -136,8 +243,8 @@
     }
 }
 
-@media screen and (max-width: 879px){
-    .profile__edit-button{
+@media screen and (max-width: 879px) {
+    .profile__edit-button {
         max-width: 18px;
         margin: 8px 10px;
     }
