внести правки в разметку и в скрипт

--- a/pages/index.css
+++ b/pages/index.css
@@ -2,3 +2,13 @@
 @import url(../vendor/normalize.css);
 /* fonts */
 @import url(../vendor/fonts.css);
+/* page */
+@import url(../page/page.css);
+/* overlay */
+@import url(../overlay/overlay.css);
+@import url(../overlay/_active/overlay__active.css);
+/* wrapper */
+@import url(../wrapper/wrapper.css);
+/* menu */
+@import url(../menu/menu.css);
+@import url(../menu/_active/menu_active.css);
