--- a/style.css
+++ b/style.css
@@ -1,44 +1,13 @@
-.page {
-    background-color: hsl(0, 0%, 0%);
-    position: relative;
-}
 
 
-.overlay {
-    display: none;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, .5);
-}
 
-.overlay_active {
-    display: block;
-}
 
-.wrapper {
-    padding: 0 15px;
-    display: block;
-    max-width: 880px;
-    margin: 0 auto;
-}
 
-.menu {
-    display: none;
-    left: 50%;
-    top: 20%;
-    transform: translateX(-50%);
-    z-index: 3;
-    position: fixed;
-    background-color: #FFFFFF;
-    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
-    border-radius: 10px;
-}
 
-.menu-active {
-    display: block;
 
-}
+
+
+
 
 .menu__title {
     width: 330px;
@@ -124,7 +93,6 @@
 .profile {
     display: flex;
     margin: 40px 0 0;
-    max-width: 880px;
 }
 
 .avatar {
@@ -177,8 +145,13 @@
 }
 
 .profile__add-button {
+    background-color: #000000;
+    width: 150px;
+    min-height: 50px;
     max-height: 50px;
     margin: 35px 0 0 244px;
+    border: 2px solid #FFFFFF;
+    border-radius: 2px;
 }
 
 
@@ -240,6 +213,7 @@
 @media screen and (max-width: 879px) {
     .profile__add-button {
         margin: 36px auto;
+        width: 90%;
     }
 }
 
@@ -250,10 +224,12 @@
     }
 }
 
+
+
 .elements {
     margin: 50px auto;
-    display: flex;
     gap: 17px;
+    display: flex;
     flex-wrap: wrap;
     flex-basis: 880px;
     justify-content: center;
