--- a/pages/index.css
+++ b/pages/index.css
@@ -5,10 +5,37 @@
 /* page */
 @import url(../page/page.css);
 /* overlay */
-@import url(../overlay/overlay.css);
-@import url(../overlay/_active/overlay__active.css);
+@import url(../blocks/overlay/overlay.css);
+@import url(../blocks/overlay/_active/overlay__active.css);
 /* wrapper */
 @import url(../wrapper/wrapper.css);
 /* menu */
-@import url(../menu/menu.css);
-@import url(../menu/_active/menu_active.css);
+@import url(../blocks/menu/menu.css);
+@import url(../blocks/menu/_active/menu_active.css);
+@import url(../blocks/menu/__title/menu__title.css);
+@import url(../blocks/menu/__options/menu__options.css);
+@import url(../blocks/menu/close-icon/close-icon.css);
+@import url(../blocks/menu/__name/menu__name.css);
+@import url(../blocks/menu/__subtitle/menu__subtitle.css);
+@import url(../blocks/menu/__button/menu__button.css);
+/* header */
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
+/* profile */
+@import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__info/profile__info.css);
+@import url(../blocks/profile/__heading/profile__heading.css);
+@import url(../blocks/profile/__name/profile__name.css);
+@import url(../blocks/profile/__edit-button/profile__edit-button.css);
+@import url(../blocks/profile/__subtitle/profile__subtitle.css);
+@import url(../blocks/profile/__add-button/profile__add-button.css);
+/* elements */
+@import url(../blocks/elements/elements.css);
+@import url(../blocks/card/card.css);
+@import url(../blocks/card/__image/card__image.css);
+@import url(../blocks/card/__bottom/card__bottom.css);
+@import url(../blocks/card/__title/card__title.css);
+/* footer */
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
