--- a/blocks/menu/__button/menu__button.css
+++ b/blocks/menu/__button/menu__button.css
@@ -2,6 +2,7 @@
     cursor: pointer;
     margin: 48px 36px 37px;
     width: 358px;
+    height: 50px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
@@ -11,4 +12,10 @@
     color: #FFFFFF;
     background: #000000;
     border-radius: 2px;
+}
+
+@media screen and (max-width: 879px) {
+    .menu__button{
+        height: 46px;
+    }
 }
