Исправить меню и добавить анимацию кнопкам

--- a/blocks/menu/__options/menu__options.css
+++ b/blocks/menu/__options/menu__options.css
@@ -1,3 +1,9 @@
 .menu__options {
     max-width: 430px;
 }
+
+@media screen and (max-width: 879px) {
+    .menu__options{
+        max-width: 238px;
+    }
+}
