--- a/blocks/menu/__subtitle/menu__subtitle.css
+++ b/blocks/menu/__subtitle/menu__subtitle.css
@@ -11,3 +11,10 @@
     color: #000000;
     border-bottom: 1px solid #000000;
 }
+
+@media screen and (max-width: 879px) {
+    .menu__subtitle{
+        max-width: 238px;
+        margin: 30px 22px 0;
+    }
+}
