--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -8,6 +8,9 @@
     border-radius: 2px;
 }
 
+.profile__add-button:hover{
+    opacity: 0.6;
+}
 
 @media screen and (max-width: 879px) {
     .profile__add-button {
