--- a/blocks/menu/__button/menu__button.css
+++ b/blocks/menu/__button/menu__button.css
@@ -17,5 +17,7 @@
 @media screen and (max-width: 879px) {
     .menu__button{
         height: 46px;
+        max-width: 238px;
+        margin-top: 45px;
     }
 }
