--- a/blocks/menu/__name/menu__name.css
+++ b/blocks/menu/__name/menu__name.css
@@ -11,3 +11,10 @@
     color: #000000;
     border-bottom: 1px solid #000000;
 }
+
+@media screen and (max-width: 879px) {
+    .menu__name{
+        max-width: 238px;
+        margin: 75px 22px 0;
+    }
+}
