--- a/blocks/menu/__title/menu__title.css
+++ b/blocks/menu/__title/menu__title.css
@@ -1,12 +1,17 @@
 .menu__title {
     width: 330px;
     text-align: center;
-    margin: 34px 36px 54px;
+    margin: 34px 36px 0;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 900;
     font-size: 18px;
     line-height: 22px;
     color: #000000;
+}
 
+@media screen and (max-width: 879px) {
+    .menu__title{
+        max-width: 238px;
+    }
 }
