--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -3,6 +3,10 @@
     cursor: pointer;
 }
 
+.profile__edit-button:hover{
+    opacity: 0.6;
+}
+
 @media screen and (max-width: 879px) {
     .profile__edit-button {
         max-width: 18px;
