--- a/pages/index.css
+++ b/pages/index.css
@@ -33,6 +33,7 @@
 /* elements */
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/card/card.css);
+@import url(../blocks/card/__button-like/card__button-like.css);
 @import url(../blocks/card/__image/card__image.css);
 @import url(../blocks/card/__bottom/card__bottom.css);
 @import url(../blocks/card/__title/card__title.css);
