--- a/blocks/menu/__close-icon/menu__close-icon.css
+++ b/blocks/menu/__close-icon/menu__close-icon.css
@@ -1,4 +1,4 @@
-.close-icon {
+.menu__close-icon {
     top: -40px;
     left: 99.9%;
     /* left: 435px; */
@@ -6,12 +6,12 @@
     cursor: pointer;
 }
 
-.close-icon:hover {
+.menu__close-icon:hover {
     opacity: 0.6;
 }
 
 @media screen and (max-width: 396px) {
-    .close-icon {
+    .menu__close-icon {
         left: 90%;
     }
 }
