--- a/pages/index.css
+++ b/pages/index.css
@@ -4,17 +4,16 @@
 @import url(../vendor/fonts.css);
 /* page */
 @import url(../page/page.css);
-/* overlay */
-@import url(../blocks/overlay/overlay.css);
-@import url(../blocks/overlay/_active/overlay__active.css);
+/* popup */
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/_active/popup_active.css);
 /* wrapper */
 @import url(../wrapper/wrapper.css);
 /* menu */
 @import url(../blocks/menu/menu.css);
-@import url(../blocks/menu/_active/menu_active.css);
 @import url(../blocks/menu/__title/menu__title.css);
 @import url(../blocks/menu/__options/menu__options.css);
-@import url(../blocks/menu/close-icon/close-icon.css);
+@import url(../blocks/menu/__close-icon/menu__close-icon.css);
 @import url(../blocks/menu/__name/menu__name.css);
 @import url(../blocks/menu/__subtitle/menu__subtitle.css);
 @import url(../blocks/menu/__button/menu__button.css);
