--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,9 +1,9 @@
-.profile-info {
+.profile__info {
     margin: 22px 0 0;
 }
 
 @media screen and (max-width: 879px) {
-    .profile-info {
+    .profile__info {
         margin: 26px auto 0;
     }
 }
