--- a/blocks/menu/__button/menu__button.css
+++ b/blocks/menu/__button/menu__button.css
@@ -17,7 +17,8 @@
 @media screen and (max-width: 879px) {
     .menu__button{
         height: 46px;
-        max-width: 238px;
-        margin-top: 45px;
+        width: 238px;
+        margin: 45px 22px 25px;
+        padding: 0;
     }
 }
