--- a/blocks/menu/menu.css
+++ b/blocks/menu/menu.css
@@ -8,3 +8,9 @@
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
 }
+
+@media screen and (max-width: 879px) {
+    .menu{
+        max-width: 282px;
+    }
+}
