--- a/blocks/menu/__title/menu__title.css
+++ b/blocks/menu/__title/menu__title.css
@@ -13,6 +13,6 @@
 @media screen and (max-width: 879px) {
     .menu__title{
         max-width: 238px;
-        margin: 25px 22px 0;
+        margin: 25px 22px 35px;
     }
 }
