--- a/blocks/menu/form/form__input.css
+++ b/blocks/menu/form/form__input.css
@@ -1,4 +1,4 @@
-.menu__name {
+.form__input {
     border: 0;
     width: 358px;
     height: 27px;
@@ -13,8 +13,8 @@
 }
 
 @media screen and (max-width: 879px) {
-    .menu__name{
+    .form__input{
         max-width: 238px;
-        margin: 75px 22px 0;
+        margin: 30px 22px 0;
     }
 }
