--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,6 +1,12 @@
 .profile__edit-button {
     margin: 15px 0 0 18px;
     cursor: pointer;
+    background-image: url(/images/vector/profile__Edit-Button.svg);
+    background-color: black;
+    border: 0;
+    background-repeat: no-repeat;
+    width: 24px;
+    padding: 0;
 }
 
 .profile__edit-button:hover{
@@ -9,7 +15,8 @@
 
 @media screen and (max-width: 879px) {
     .profile__edit-button {
-        max-width: 18px;
+        max-width: 24px;
+        height: 24px;
         margin: 8px 10px;
     }
 }
