--- a/pages/index.css
+++ b/pages/index.css
@@ -9,12 +9,14 @@
 @import url(../blocks/popup/_active/popup_active.css);
 /* wrapper */
 @import url(../blocks/wrapper/wrapper.css);
+/* form */
+@import url(../blocks/form/form.css);
+@import url(../blocks/form/__input/form__input.css);
 /* menu */
 @import url(../blocks/menu/menu.css);
 @import url(../blocks/menu/__title/menu__title.css);
 @import url(../blocks/menu/__options/menu__options.css);
 @import url(../blocks/menu/__close-icon/menu__close-icon.css);
-@import url(../blocks/menu/form/form__input.css);
 @import url(../blocks/menu/__button/menu__button.css);
 /* header */
 @import url(../blocks/header/header.css);
