--- a/blocks/menu/__button/menu__button.css
+++ b/blocks/menu/__button/menu__button.css
@@ -6,19 +6,26 @@
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    font-size: 14px;
-    line-height: 17px;
+    font-size: 18px;
+    line-height: 22px;
     text-align: center;
     color: #FFFFFF;
     background: #000000;
     border-radius: 2px;
+    border: 0;
+}
+
+.menu__button:hover {
+    opacity: 0.8;
 }
 
 @media screen and (max-width: 879px) {
-    .menu__button{
+    .menu__button {
         height: 46px;
         width: 238px;
         margin: 45px 22px 25px;
         padding: 0;
+        font-size: 14px;
+        line-height: 17px;
     }
 }
