--- a/blocks/menu/__close-icon/menu__close-icon.css
+++ b/blocks/menu/__close-icon/menu__close-icon.css
@@ -4,6 +4,10 @@
     /* left: 435px; */
     position: fixed;
     cursor: pointer;
+    width: 32px;
+    height: 32px;
+    border: 0;
+    background-color: black;
 }
 
 .menu__close-icon:hover {
@@ -12,6 +16,9 @@
 
 @media screen and (max-width: 396px) {
     .menu__close-icon {
-        left: 90%;
+        width: 20px;
+        height: 20px;
+        left: 95%;
+        top: -30px;
     }
 }
