--- a/blocks/card/__button-like/card__button-like.css
+++ b/blocks/card/__button-like/card__button-like.css
@@ -11,7 +11,7 @@
 .card__button-like_active{
     margin-top: 7px;
     background-repeat: no-repeat;
-    background-image: url(/images/vector/like__active.svg);
+    background-image: url("/images/vector/like__active.svg");
 }
 
 .card__button-like:hover {
