--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,7 +1,7 @@
 .profile__edit-button {
     margin: 15px 0 0 18px;
     cursor: pointer;
-    background-image: url(/images/vector/profile__Edit-Button.svg);
+    background-image: url("../../../images/vector/profile__Edit-Button.svg");
     background-color: black;
     border: 0;
     background-repeat: no-repeat;
