--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,9 +1,19 @@
 .footer__copyright {
-    margin: 0;
+    margin: 0 0 0 19PX;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
     color: #545454;
+}
+
+@media screen and (max-width: 879px) {
+    .footer__copyright {
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 17px;
+    }
 }
