--- a/blocks/menu/__close-icon/menu__close-icon.css
+++ b/blocks/menu/__close-icon/menu__close-icon.css
@@ -1,13 +1,13 @@
 .menu__close-icon {
     top: -40px;
     left: 99.9%;
-    /* left: 435px; */
     position: fixed;
     cursor: pointer;
     width: 32px;
     height: 32px;
     border: 0;
     background-color: black;
+    background-image: url("../../../images/vector/Close_Icon.svg");
 }
 
 .menu__close-icon:hover {
@@ -20,5 +20,6 @@
         height: 20px;
         left: 95%;
         top: -30px;
+        background-size: 20px 20px;
     }
 }
