--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -9,7 +9,7 @@
 
 @media screen and (max-width: 879px) {
     .footer__copyright {
-        margin: 0 0 0 19PX;
+        margin: 0 0 0 19px;
         font-family: 'Inter';
         font-style: normal;
         font-weight: 400;
