Создать кнопки и попап

--- a/blocks/card/__button-like/card__button-like.css
+++ b/blocks/card/__button-like/card__button-like.css
@@ -2,10 +2,12 @@
     cursor: pointer;
     background-image: url("../../../images/vector/card__like.svg");
     background-repeat: no-repeat;
+    background-size: 100%;
     border: none;
     background-color: white;
-    width: 32px;
+    width: 22px;
     padding: 0;
+    transition: 0.3s;
 }
 
 .card__button-like_active{
@@ -16,4 +18,5 @@
 
 .card__button-like:hover {
     opacity: 0.6;
+    scale: 0.5s;
 }
