--- a/pages/index.css
+++ b/pages/index.css
@@ -7,6 +7,9 @@
 /* popup */
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_active/popup_active.css);
+/* popup-cards */
+@import url(../blocks/popup-cards/popup-cards.css);
+@import url(../blocks/popup-cards/_active/popup-cards_active.css);
 /* wrapper */
 @import url(../blocks/wrapper/wrapper.css);
 /* form */
@@ -16,6 +19,7 @@
 /* menu */
 @import url(../blocks/menu/menu.css);
 @import url(../blocks/menu/__title/menu__title.css);
+@import url(../blocks/menu/__title-cards/menu__title-cards.css);
 @import url(../blocks/menu/__options/menu__options.css);
 @import url(../blocks/menu/__close-icon/menu__close-icon.css);
 /* header */
@@ -33,6 +37,7 @@
 /* elements */
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/card/card.css);
+@import url(../blocks/card/__button-delete/card__button-delete.css);
 @import url(../blocks/card/__button-like/card__button-like.css);
 @import url(../blocks/card/__image/card__image.css);
 @import url(../blocks/card/__description/card__description.css);
