--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -1,5 +1,6 @@
 .card__image {
     border-radius: 10px 10px 0 0;
     width: 100%;
-    max-height: 282px;
+    height: 282px;
+    object-fit: cover;
 }
