Создание обработчика для добавления карточки

--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -4,11 +4,12 @@
     display: flex;
     flex-wrap: wrap;
     flex-basis: 880px;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
-@media screen and (max-width: 879px) {
+@media screen and (max-width: 909px) {
     .elements{
+        justify-content: center;
         margin: 36px auto;
     }
 }
