Реализовать функцию добавления и удаления карточек

--- a/pages/index.css
+++ b/pages/index.css
@@ -52,3 +52,6 @@
 /* footer */
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
+
+/* animate */
+@import url(../blocks/animation-open/animation-open.css);
