--- a/blocks/popup-image/__open-image/popup-image__open-image.css
+++ b/blocks/popup-image/__open-image/popup-image__open-image.css
@@ -1,15 +1,5 @@
 .popup-image__open-image{
-    position: absolute;
-    width: 75vw;
-    height: 75vh;
-    top: 10%;
-    left: 50%;
-    transform: translateX(-50%);
     object-fit: contain;
+    max-height: 75vh;
 }
 
-@media screen and (max-width: 880px) {
-.popup-image__open-image{
-    height: 65vh;
-}
-}
