--- a/blocks/animation-close/animation-close.css
+++ b/blocks/animation-close/animation-close.css
@@ -1,5 +1,6 @@
 .animation-close{
     animation: close-opacity 0.7s ease-in;
+    animation-iteration-count: 1;
 }
   @keyframes close-opacity {
     from {
