--- a/blocks/popup-image/__open-image/popup-image__open-image.css
+++ b/blocks/popup-image/__open-image/popup-image__open-image.css
@@ -1,5 +1,6 @@
 .popup-image__open-image{
-    object-fit: contain;
-    max-height: 75vh;
+    object-fit: cover;
+    max-height: 75vh;git 
+    max-width: 75vw;
 }
 
