--- a/blocks/popup-image/close-icon/popup-image__close-icon.css
+++ b/blocks/popup-image/close-icon/popup-image__close-icon.css
@@ -5,8 +5,7 @@
     border: 0;
     background: transparent;
     background-image: url("../../../images/vector/Close_Icon.svg");
-    align-self: flex-end;
-    margin: 8px -40px;
+    margin: -38px 0 0 5px;
 }
 
 
@@ -17,7 +16,6 @@
 
 @media screen and (max-width: 396px) {
     .popup-image__close-icon {
-        margin: 0 0;
         width: 20px;
         height: 20px;
         background-size: 20px 20px;
