--- a/blocks/form-cards/__input/form-cards__input.css
+++ b/blocks/form-cards/__input/form-cards__input.css
@@ -10,6 +10,7 @@
     line-height: 17px;
     color: #000000;
     border-bottom: 1px solid #000000;
+    opacity: 0.2;
 }
 
 @media screen and (max-width: 879px) {
