--- a/blocks/popup-image/__container/popup-image__container.css
+++ b/blocks/popup-image/__container/popup-image__container.css
@@ -7,6 +7,6 @@
 
 @media screen and (max-width: 600px) {
     .popup-image__container{
-        margin: 35% auto;;
+        margin: 35% auto;
     }
 }
