--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -8,7 +8,7 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
-    color: #000000;
+    color: #C4C4C4;
     border-bottom: 1px solid #000000;
     opacity: 0.2;
 }
