--- a/blocks/popup/_type_image/__close-icon/popup_type_image__close-icon.css
+++ b/blocks/popup/_type_image/__close-icon/popup_type_image__close-icon.css
@@ -1,21 +1,22 @@
-.popup-image__close-icon {
+.popup_type_image__close-icon {
+    position: relative;
+    top: 0;
+    left: 0;
     cursor: pointer;
     width: 32px;
     height: 32px;
     border: 0;
-    background: transparent;
-    background-image: url("../../../images/vector/Close_Icon.svg");
     margin: -38px 0 0 5px;
 }
 
 
 
-.popup-image__close-icon:hover {
+.popup_type_image__close-icon:hover {
     opacity: 0.6;
 }
 
 @media screen and (max-width: 396px) {
-    .popup-image__close-icon {
+    .popup_type_image__close-icon {
         width: 20px;
         height: 20px;
         background-size: 20px 20px;
