--- a/blocks/popup/_type_image/__close-icon/popup_type_image__close-icon.css
+++ b/blocks/popup/_type_image/__close-icon/popup_type_image__close-icon.css
@@ -3,10 +3,11 @@
     top: 0;
     left: 0;
     cursor: pointer;
-    width: 32px;
+    width: 37px;
     height: 32px;
     border: 0;
     margin: -38px 0 0 5px;
+    background-repeat: no-repeat;
 }
 
 
