--- a/blocks/popup/_type_image/__container/popup_type_image__container.css
+++ b/blocks/popup/_type_image/__container/popup_type_image__container.css
@@ -1,5 +1,8 @@
 .popup_type_image__container{
-    margin: 13% auto;
+    position: fixed;
+    left: 50%;
+    top: 15%;
+    transform: translateX(-50%);
     display: flex;
     justify-content: center;
     flex-direction: row;
