--- a/pages/index.css
+++ b/pages/index.css
@@ -16,6 +16,11 @@
 @import url(../blocks/popup/_type_image/__open-image/popup_type_image__open-image.css);
 @import url(../blocks/popup/_type_image/__title/popup_type_image__title.css);
 @import url(../blocks/popup/_type_image/__container/popup_type_image__container.css);
+/* image-container */
+@import url(../blocks/image_container/image-container.css);
+@import url(../blocks/image_container/image-container__title/image-container__title.css);
+@import url(../blocks/image_container/image-container__open-image/image-container__open-image.css);
+@import url(../blocks/image_container/image-container__close-icon/image-container__close-icon.css);
 /* wrapper */
 @import url(../blocks/wrapper/wrapper.css);
 /* popup_active */
