--- a/pages/index.css
+++ b/pages/index.css
@@ -13,6 +13,7 @@
 @import url(../blocks/form-cards/__input/form-cards__input.css);
 @import url(../blocks/form-cards/__button/form-cards__button.css);
 /* popup-image */
+@import url(../blocks/popup/_type_image/popup_type_image.css);
 @import url(../blocks/popup/_type_image/__open-image/popup_type_image__open-image.css);
 @import url(../blocks/popup/_type_image/__title/popup_type_image__title.css);
 @import url(../blocks/popup/_type_image/__container/popup_type_image__container.css);
