--- a/pages/index.css
+++ b/pages/index.css
@@ -30,6 +30,9 @@
 @import url(../blocks/form/form.css);
 @import url(../blocks/form/__input/form__input.css);
 @import url(../blocks/form/__button/form__button.css);
+@import url(../blocks/form/__error/form__error.css);
+@import url(../blocks/form/__error/_visible/form__error_visible.css);
+@import url(../blocks/form/__button/_active/form__button_active.css);
 /* menu */
 @import url(../blocks/menu/menu.css);
 @import url(../blocks/menu/__title/menu__title.css);
