--- a/blocks/form/__button/form__button.css
+++ b/blocks/form/__button/form__button.css
@@ -9,10 +9,10 @@
     font-size: 18px;
     line-height: 22px;
     text-align: center;
-    color: #FFFFFF;
-    background: #000000;
+    color: #000000;
+    background: #ffffff;
     border-radius: 2px;
-    border: 0;
+    border: 1px solid #000000;
 }
 
 .menu__button:hover {
