--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -9,7 +9,7 @@
     font-size: 14px;
     line-height: 17px;
     color: #C4C4C4;
-    border-bottom: 1px solid #000000;;
+    border-bottom: 1px solid #000000;
     opacity: 0.2;
 }
 
