--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -8,9 +8,8 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
-    color: #C4C4C4;
+    color: #000000;
     border-bottom: 1px solid #000000;
-    opacity: 0.2;
 }
 
 @media screen and (max-width: 879px) {
