--- a/blocks/image_container/image-container.css
+++ b/blocks/image_container/image-container.css
@@ -5,7 +5,7 @@
     transform: translateX(-50%);
     display: flex;
     justify-content: center;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 @media screen and (max-width: 600px) {
