--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -18,6 +18,7 @@
 
 @media screen and (max-width: 879px) {
     .form__input{
+        text-overflow: ellipsis;
         max-width: 238px;
         margin: 30px 22px 0;
     }
