--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -15,6 +15,7 @@
 
 @media screen and (max-width: 879px) {
     .profile__name {
+        max-width: 230px;
         margin: 0 auto;
         font-family: 'Inter';
         font-style: normal;
