--- a/blocks/menu/__title-avatar/menu__title-avatar.css
+++ b/blocks/menu/__title-avatar/menu__title-avatar.css
@@ -1,3 +1,8 @@
-.menu__title-avatar{
-    
+.menu__title-avatar {
+    margin: 34px 0 54px 36px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 29px;
 }
