Добавить карточки с сервера

--- a/pages/index.css
+++ b/pages/index.css
@@ -35,6 +35,7 @@
 @import url(../blocks/form/__input/form__input.css);
 @import url(../blocks/form/__button/form__button.css);
 @import url(../blocks/error-span/error-span.css);
+@import url(../blocks/menu-avatar/__error-span/menu-avatar__error-span.css);
 @import url(../blocks/form/__button/_active/form__button_active.css);
 @import url(../blocks/form-avatar/__form-avatar__input/form-avatar__input.css);
 @import url(../blocks/form-avatar/__button/form-avatar__button.css);
