--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,7 +1,8 @@
 .profile__avatar {
-    max-width: 168px;
-    max-height: 127px;
+    width: 120px;
+    height: 120px;
     border-radius: 50%;
     cursor: pointer;
+    object-fit: cover;
 }
 
