--- a/pages/index.css
+++ b/pages/index.css
@@ -67,6 +67,7 @@
 @import url(../blocks/card/card.css);
 @import url(../blocks/card/__button-delete/card__button-delete.css);
 @import url(../blocks/card/__button-like/card__button-like.css);
+@import url(../blocks/like-info/like-info.css);
 @import url(../blocks/card/__image/card__image.css);
 @import url(../blocks/card/__description/card__description.css);
 @import url(../blocks/card/__title/card__title.css);
