--- a/pages/index.css
+++ b/pages/index.css
@@ -6,6 +6,8 @@
 @import url(../blocks/page/page.css);
 /* popup */
 @import url(../blocks/popup/popup.css);
+/* /*popup-confirm/ */
+@import url(../blocks/popup/_type_confirm/popup_type_confirm.css);
 /* popup-cards */
 @import url(../blocks/popup/_type_cards/popup_type_cards.css);
 /* popup-avatar */
@@ -39,9 +41,12 @@
 @import url(../blocks/form/__button/_active/form__button_active.css);
 @import url(../blocks/form-avatar/__form-avatar__input/form-avatar__input.css);
 @import url(../blocks/form-avatar/__button/form-avatar__button.css);
+@import url(../blocks/menu-confirm/__button/menu-confirm__button.css);
 /* menu */
 @import url(../blocks/menu/menu.css);
+@import url(../blocks/menu-confirm/menu-confirm.css);
 @import url(../blocks/menu/__title/menu__title.css);
+@import url(../blocks/menu-confirm/__title/menu-confirm__title.css);
 @import url(../blocks/menu/__title-cards/menu__title-cards.css);
 @import url(../blocks/menu/__options/menu__options.css);
 @import url(../blocks/menu/__close-icon/menu__close-icon.css);
