--- a/main.css
+++ b/main.css
@@ -4,10 +4,13 @@
 @font-face{font-display:swap;font-family:Inter;font-style:normal;font-weight:400;src:url(c8ba52b05a9ef10f4758.woff2) format("woff2"),url(8c206db99195777c6769.woff) format("woff")}@font-face{font-display:swap;font-family:Inter;font-style:normal;font-weight:500;src:url(293fd13dbca5a3e450ef.woff2) format("woff2"),url(9053572c46aeb4b16caa.woff) format("woff")}@font-face{font-display:swap;font-family:Inter;font-style:normal;font-weight:900;src:url(15ca31c0a2a68f76d2d1.woff2) format("woff2"),url(c6938660eec019fefd68.woff) format("woff")}
 .page{background-color:#000;position:relative}
 .popup{background:rgba(0,0,0,.5);display:none;height:100%;position:absolute;top:0;width:100%}
+
 .popup_type_cards{background:rgba(0,0,0,.5);display:none;height:100%;position:absolute;top:0;width:100%}
+
 .form-cards{max-width:430px}@media screen and (max-width:879px){.form-cards{max-width:238px}}
 .form-cards__input{border:0;border-bottom:1px solid #000;color:#000;font-family:Inter;font-size:14px;font-style:normal;font-weight:400;height:27px;line-height:17px;margin:30px 34px 0;width:358px}@media screen and (max-width:879px){.form-cards__input{margin:30px 22px 0;max-width:238px}}
 .menu-cards__buttonCreate{background:#000;border:0;border-radius:2px;color:#fff;cursor:pointer;font-family:Inter;font-size:18px;font-style:normal;font-weight:400;height:50px;line-height:22px;margin:48px 36px 37px;text-align:center;width:358px}.menu-cards__buttonCreate:hover{opacity:.8}@media screen and (max-width:879px){.menu-cards__buttonCreate{font-size:14px;height:46px;line-height:17px;margin:45px 22px 25px;padding:0;width:238px}}
+
 .popup_type_image{background:rgba(0,0,0,.9);position:fixed}
 .popup_type_image__open-image{max-height:75vh;max-width:75vw;-o-object-fit:cover;object-fit:cover}
 .popup_type_image__title{align-self:flex-end;color:#fff;font-family:Inter;font-size:12px;font-style:normal;font-weight:400;line-height:15px;margin:0 -55px -28px 0}
@@ -22,17 +25,27 @@
 .form__input{border:0;border-bottom:1px solid #000;color:#000;font-family:Inter;font-size:14px;font-style:normal;font-weight:400;height:27px;line-height:17px;margin:30px 34px 0;width:358px}.form__input_error{border-bottom:1px solid red}@media screen and (max-width:879px){.form__input{margin:30px 22px 0;max-width:238px;text-overflow:ellipsis}}
 .menu__button{background:#fff;border:1px solid #000;border-radius:2px;color:#000;cursor:pointer;font-family:Inter;font-size:18px;font-style:normal;font-weight:400;height:50px;line-height:22px;margin:48px 36px 37px;opacity:.2;text-align:center;width:358px}.menu__button:hover{opacity:.8}@media screen and (max-width:879px){.menu__button{font-size:14px;height:46px;line-height:17px;margin:45px 22px 25px;padding:0;width:238px}}
 .error-span{color:red;display:block;font-family:Inter;font-size:12px;font-style:normal;font-weight:400;left:33px;line-height:15px;position:absolute}@media screen and (max-width:879px){.error-span{color:red;display:block;font-family:Inter;font-size:12px;font-style:normal;font-weight:400;left:23px;line-height:15px;position:absolute}}
+.menu-avatar__error-span{left:35px;top:150px}
 .form__button_active{background:#000;border:0;color:#fff;cursor:pointer;opacity:1}
+.form-avatar__input{margin:0 0 36px 36px;width:358px}
+.menu-avatar__button{margin:0 0 36px 36px}
+.menu-confirm__button{margin-top:14px}
 .menu{background-color:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);left:50%;position:fixed;top:20%;transform:translateX(-50%);z-index:3}@media screen and (max-width:879px){.menu{max-width:282px}}
+.menu-confirm{max-height:181px}
 .menu__title{color:#000;font-family:Inter;font-size:24px;font-style:normal;font-weight:900;line-height:30px;margin:34px 36px 24px;text-align:center;width:330px}@media screen and (max-width:879px){.menu__title{font-size:18px;line-height:22px;margin:25px 22px 35px;max-width:238px}}
+.menu-confirm__title{text-align:start}
 .menu__title-cards{text-align:start}
 
 .menu__close-icon{background-color:#000;background-image:url(2ceb783afbab75916ddc.svg);border:0;cursor:pointer;height:32px;left:99.9%;position:fixed;top:-40px;width:32px}.menu__close-icon:hover{opacity:.6}@media screen and (max-width:396px){.menu__close-icon{background-size:20px 20px;height:20px;left:95%;top:-30px;width:20px}}
 .popup_type_image__close-icon{background-repeat:no-repeat;border:0;cursor:pointer;height:32px;left:0;margin:-38px 0 0 5px;position:relative;top:0;width:37px}.popup_type_image__close-icon:hover{opacity:.6}@media screen and (max-width:396px){.popup_type_image__close-icon{background-size:20px 20px;height:20px;width:20px}}
+.menu__title-avatar{font-family:Inter;font-size:24px;font-style:normal;font-weight:900;line-height:29px;margin:34px 0 54px 36px}
+.menu-avatar{height:272px}
 .header{border-bottom:1px solid #545454;margin:45px 0 0;max-height:74px;min-height:56px}@media screen and (max-width:879px){.header{margin:28px 0 0;max-height:54px}}
 .header__logo{margin:0 0 41px}@media screen and (max-width:879px){.header__logo{margin:0 28px 31px;max-width:103px}}
 .profile{display:flex;margin:40px 0 0}@media screen and (max-width:879px){.profile{flex-direction:column}}
-.profile__avatar{border-radius:50%;margin:0 30px 0 0;max-height:127px;max-width:168px}@media screen and (max-width:879px){.profile__avatar{margin:0 auto}}
+.profile__avatar-block{margin:0 30px 0 0;max-height:127px;max-width:127px;position:relative}@media screen and (max-width:879px){.profile__avatar-block{margin:0 auto}}
+.profile__avatar-edit-button{background-color:transparent;background-image:url(a086f758840ae814ecde.svg);background-position:50%;background-repeat:no-repeat;border:none;border-radius:50%;cursor:pointer;height:127px;left:50%;opacity:0;position:absolute;transform:translateX(-50%);width:127px}@media screen and (max-width:879px){.profile__avatar-edit-button{left:50%}}.profile__avatar-edit-button:hover{background-color:#000;opacity:.8}
+.profile__avatar{border-radius:50%;cursor:pointer;height:120px;-o-object-fit:cover;object-fit:cover;width:120px}
 .profile__info{margin:22px 0 0}@media screen and (max-width:879px){.profile__info{margin:26px auto 0;max-width:320px}}
 .profile__heading{display:flex}
 .profile__name{color:#fff;display:block;font-family:Inter;font-size:42px;font-style:normal;font-weight:500;line-height:48px;margin:0;max-width:358px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:879px){.profile__name{font-family:Inter;font-size:27px;font-style:normal;font-weight:500;line-height:33px;margin:0 auto;max-width:230px;text-align:center}}@media screen and (max-width:320px){.profile__name{margin:0 0 0 51px;width:189px}}
@@ -42,9 +55,10 @@
 .elements{display:flex;flex-basis:880px;flex-wrap:wrap;gap:17px;justify-content:flex-start;margin:50px auto}@media screen and (max-width:909px){.elements{justify-content:center;margin:36px auto}}
 .card{background-color:#fff;border-radius:10px;height:361px;position:relative;width:282px}
 .card__button-delete{background-color:rgba(28,28,28,0);background-image:url(823b0cf1b0b7e9cb7cad.svg);background-repeat:no-repeat;border:0;cursor:pointer;height:19px;position:absolute;right:21px;top:20px;width:18px}.card__button-delete:hover{opacity:.6}
-.card__button-like{background-color:#fff;background-image:url(87ed371465c7a6a1cd01.svg);background-repeat:no-repeat;background-size:100%;border:none;cursor:pointer;padding:0;transition:.3s;width:20px}.card__button-like_active{background-image:url(fe17a515669479b1e649.svg);background-repeat:no-repeat;margin-top:7px}.card__button-like:hover{opacity:.6;scale:.5s}
+.card__button-like{background-color:#fff;background-image:url(87ed371465c7a6a1cd01.svg);background-repeat:no-repeat;background-size:100%;border:none;cursor:pointer;padding:0;transition:.3s;width:20px}.card__button-like_active{background-image:url(fe17a515669479b1e649.svg);background-repeat:no-repeat}.card__button-like:hover{opacity:.6;scale:.5s}
+.like-info{color:#000;font-family:Inter;font-size:13px;font-style:normal;font-weight:400;height:13px;line-height:16px;position:absolute;right:5px;text-align:center;top:20px;width:10px}
 .card__image{border-radius:10px 10px 0 0;cursor:pointer;height:282px;-o-object-fit:cover;object-fit:cover;width:100%}
-.card__description{display:flex;justify-content:space-between;margin:25px auto;max-width:246px}
+.card__description{display:flex;justify-content:space-between;margin:25px auto;max-width:246px;position:relative}
 .card__title{color:#000;font-family:Inter;font-size:24px;font-style:normal;font-weight:900;line-height:29px;margin:0;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
 .footer{margin:66px 0 60px}@media screen and (max-width:879px){.footer{margin:48px 4px 36px}}
 .footer__copyright{color:#545454;font-family:Inter;font-size:18px;font-style:normal;font-weight:400;line-height:22px}@media screen and (max-width:879px){.footer__copyright{font-size:14px;line-height:17px;margin:0 0 0 19px}}
