--- a/blocks/menu/__close-icon/menu__close-icon.css
+++ b/blocks/menu/__close-icon/menu__close-icon.css
@@ -7,6 +7,7 @@
     height: 32px;
     border: 0;
     background-color: black;
+    background: transparent;
     background-image: url("../../../images/vector/Close_Icon.svg");
 }
 
