--- a/main.css
+++ b/main.css
@@ -29,14 +29,14 @@
 .form__button_active{background:#000;border:0;color:#fff;cursor:pointer;opacity:1}
 .form-avatar__input{margin:0 0 36px 36px;width:358px}
 .menu-avatar__button{margin:0 0 36px 36px}
-.menu-confirm__button{margin-top:14px}
+.menu-confirm__button{background:#000;border:0;color:#fff;cursor:pointer;margin-top:14px;opacity:1}
 .menu{background-color:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);left:50%;position:fixed;top:20%;transform:translateX(-50%);z-index:3}@media screen and (max-width:879px){.menu{max-width:282px}}
 .menu-confirm{max-height:181px}
 .menu__title{color:#000;font-family:Inter;font-size:24px;font-style:normal;font-weight:900;line-height:30px;margin:34px 36px 24px;text-align:center;width:330px}@media screen and (max-width:879px){.menu__title{font-size:18px;line-height:22px;margin:25px 22px 35px;max-width:238px}}
 .menu-confirm__title{text-align:start}
 .menu__title-cards{text-align:start}
 
-.menu__close-icon{background-color:#000;background-image:url(2ceb783afbab75916ddc.svg);border:0;cursor:pointer;height:32px;left:99.9%;position:fixed;top:-40px;width:32px}.menu__close-icon:hover{opacity:.6}@media screen and (max-width:396px){.menu__close-icon{background-size:20px 20px;height:20px;left:95%;top:-30px;width:20px}}
+.menu__close-icon{background-color:#000;background:transparent;background-image:url(2ceb783afbab75916ddc.svg);border:0;cursor:pointer;height:32px;left:99.9%;position:fixed;top:-40px;width:32px}.menu__close-icon:hover{opacity:.6}@media screen and (max-width:396px){.menu__close-icon{background-size:20px 20px;height:20px;left:95%;top:-30px;width:20px}}
 .popup_type_image__close-icon{background-repeat:no-repeat;border:0;cursor:pointer;height:32px;left:0;margin:-38px 0 0 5px;position:relative;top:0;width:37px}.popup_type_image__close-icon:hover{opacity:.6}@media screen and (max-width:396px){.popup_type_image__close-icon{background-size:20px 20px;height:20px;width:20px}}
 .menu__title-avatar{font-family:Inter;font-size:24px;font-style:normal;font-weight:900;line-height:29px;margin:34px 0 54px 36px}
 .menu-avatar{height:272px}
