--- a/blocks/form-avatar/__form-avatar__input/form-avatar__input.css
+++ b/blocks/form-avatar/__form-avatar__input/form-avatar__input.css
@@ -2,3 +2,9 @@
     width: 358px;
 margin: 0 0 36px 36px;
 }
+
+@media screen and (max-width: 879px) {
+    .form-avatar__input{
+        margin-left: 24px;
+    }
+}
