--- a/blocks/menu/__title-avatar/menu__title-avatar.css
+++ b/blocks/menu/__title-avatar/menu__title-avatar.css
@@ -6,3 +6,11 @@
     font-size: 24px;
     line-height: 29px;
 }
+
+
+@media screen and (max-width: 879px) {
+    .menu__title-avatar{
+        margin-left: 24px;
+    }
+    
+}
